--- a/demo-construction-services.html
+++ b/demo-construction-services.html
@@ -213,111 +213,112 @@
 
           <div class="container">
             <div class="row col-mb-50 mb-0">
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/building.png"
-                        alt="Concrete Developments"
-                    /></a>
-                  </div>
-                  <div class="fbox-content">
-                    <h3>Concrete Developments</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/bank.png"
-                        alt="Finance Assistance"
-                    /></a>
-                  </div>
-                  <div class="fbox-content">
-                    <h3>Finance Assistance</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
+              <div class="row align-items-stretch col-mb-50">
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/building.png"
+                          alt="Concrete Developments"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Concrete Developments</h3>
+                      <p>We specialize in concrete construction projects, delivering robust and durable structures that meet industry standards and client expectations.
+  
+  
+                      </p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/drawer.png"
-                        alt="Interiorly Designed"
-                    /></a>
-                  </div>
-                  <div class="fbox-content">
-                    <h3>Interiorly Designed</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/paper-money.png"
-                        alt="Cost Effective Solutions"
-                    /></a>
-                  </div>
-                  <div class="fbox-content">
-                    <h3>Cost Effective Solutions</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/bank.png"
+                          alt="Finance Assistance"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Finance Assistance</h3>
+                      <p>
+                        We offer financial assistance services, helping clients manage budgets, secure funding, and ensure financial stability throughout their construction projects.
+                      </p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/traffic-cone.png"
-                        alt="Smart Builders"
-                    /></a>
-                  </div>
-                  <div class="fbox-content">
-                    <h3>Smart Builders</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/drawer.png"
+                          alt="Interiorly Designed"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Interiorly Designed</h3>
+                      <p>
+                        Our team provides expert interior design services, creating aesthetically pleasing and functional interior spaces that enhance the overall appeal and usability of buildings.
+  
+  
+                      </p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6 col-lg-4">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon">
-                    <a href="#"
-                      ><img
-                        src="images/icons/paint-brush.png"
-                        alt="Quality Infrastructure"
-                    /></a>
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/paper-money.png"
+                          alt="Cost Effective Solutions"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Cost Effective Solutions</h3>
+                      <p>
+                        We prioritize cost-effective solutions, ensuring that projects are completed within budget without compromising on quality or performance.
+                      </p>
+                    </div>
                   </div>
-                  <div class="fbox-content">
-                    <h3>Quality Infrastructure</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Autem minima, facere distinctio placeat.
-                    </p>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/traffic-cone.png"
+                          alt="Smart Builders"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Smart Builders</h3>
+                      <p>
+                        Our team of smart builders employs innovative construction techniques and technologies to improve efficiency, reduce waste, and deliver superior results.
+  
+  
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <div class="feature-box fbox-plain">
+                    <div class="fbox-icon">
+                      <a href="#"
+                        ><img
+                          src="images/icons/paint-brush.png"
+                          alt="Quality Infrastructure"
+                      /></a>
+                    </div>
+                    <div class="fbox-content">
+                      <h3>Quality Infrastructure</h3>
+                      <p>
+                        We are committed to building quality infrastructure, ensuring that all projects meet high standards of safety, durability, and functionality for long-term success.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
