--- a/demo-construction-contact.html
+++ b/demo-construction-contact.html
@@ -37,7 +37,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>Contact Us - Construction | Canvas</title>
+    <title>Contact Us - ERG | Construction</title>
   </head>
 
   <body class="stretched">
@@ -144,11 +144,11 @@
                   ><div>About Us</div></a
                 >
               </li>
-              <li class="menu-item">
+              <!-- <li class="menu-item">
                 <a class="menu-link" href="demo-construction-projects.html"
                   ><div>Projects</div></a
                 >
-              </li>
+              </li> -->
               <li class="menu-item current">
                 <a class="menu-link" href="demo-construction-contact.html"
                   ><div>Contact</div></a
