--- a/demo-construction-services.html
+++ b/demo-construction-services.html
@@ -37,7 +37,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>Services - Construction | Canvas</title>
+    <title>Services - ERG | Construction</title>
   </head>
 
   <body class="stretched">
@@ -341,9 +341,9 @@
                       >
                     </h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Eligendi rem, facilis nobis voluptatum est voluptatem
-                      accusamus molestiae eaque perspiciatis mollitia.
+                      Our team consists of highly skilled professionals with extensive experience and expertise in the construction industry, ensuring top-quality results for every project.
+
+
                     </p>
                   </div>
                 </div>
@@ -364,10 +364,9 @@
                         >Construction Process Organized.</span
                       >
                     </h3>
-                    <p>
-                      Porro repellat vero sapiente amet vitae quibusdam
-                      necessitatibus consectetur, labore totam. Accusamus
-                      perspiciatis asperiores labore esse.
+                    <p>We prioritize effective planning to ensure that all aspects of our projects are well-coordinated, timely, and within budget, leading to successful project outcomes.
+
+
                     </p>
                   </div>
                 </div>
@@ -389,9 +388,9 @@
                       >
                     </h3>
                     <p>
-                      Quos, non, esse eligendi ab accusantium voluptatem. Maxime
-                      eligendi beatae, atque tempora ullam. Vitae delectus quia,
-                      consequuntur rerum quo.
+                      We implement comprehensive risk management strategies to identify, assess, and mitigate potential risks, ensuring the smooth progression and safety of all our projects.
+
+
                     </p>
                   </div>
                 </div>
@@ -413,9 +412,7 @@
                       >
                     </h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Eligendi rem, facilis nobis voluptatum est voluptatem
-                      accusamus molestiae eaque perspiciatis mollitia.
+                      Our design and build package offers a seamless integration of architectural design and construction services, providing a cohesive and efficient approach to project delivery.
                     </p>
                   </div>
                 </div>
@@ -437,9 +434,7 @@
                       >
                     </h3>
                     <p>
-                      Porro repellat vero sapiente amet vitae quibusdam
-                      necessitatibus consectetur, labore totam. Accusamus
-                      perspiciatis asperiores labore esse.
+                      We provide expert architecture planning services, creating innovative and functional designs that meet the unique needs and preferences of our clients.
                     </p>
                   </div>
                 </div>
@@ -461,9 +456,7 @@
                       >
                     </h3>
                     <p>
-                      Quos, non, esse eligendi ab accusantium voluptatem. Maxime
-                      eligendi beatae, atque tempora ullam. Vitae delectus quia,
-                      consequuntur rerum quo.
+                      Our general maintenance services ensure the longevity and optimal performance of buildings and infrastructure, addressing any issues promptly and effectively.
                     </p>
                   </div>
                 </div>
