--- a/demo-construction-about-us.html
+++ b/demo-construction-about-us.html
@@ -39,7 +39,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>About Us - Construction | Canvas</title>
+    <title>About Us - ERG | Construction</title>
 
     <style>
       .slider-caption-bg {
@@ -153,11 +153,11 @@
                   ><div>About Us</div></a
                 >
               </li>
-              <li class="menu-item">
+              <!-- <li class="menu-item">
                 <a class="menu-link" href="demo-construction-projects.html"
                   ><div>Projects</div></a
                 >
-              </li>
+              </li> -->
               <li class="menu-item">
                 <a class="menu-link" href="demo-construction-contact.html"
                   ><div>Contact</div></a
