--- a/demo-construction-icons.html
+++ b/demo-construction-icons.html
@@ -40,7 +40,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>Icons - Construction | Canvas</title>
+    <title>ERG | Construction</title>
 
     <style>
       .real-estate-icons {
@@ -177,11 +177,11 @@
                   ><div>About Us</div></a
                 >
               </li>
-              <li class="menu-item">
+              <!-- <li class="menu-item">
                 <a class="menu-link" href="demo-construction-projects.html"
                   ><div>Projects</div></a
                 >
-              </li>
+              </li> -->
               <li class="menu-item">
                 <a class="menu-link" href="demo-construction-contact.html"
                   ><div>Contact</div></a
