--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>ERG | Construction</title>
+    <title>Home ERG | Construction</title>
   </head>
 
   <body class="stretched">
@@ -134,11 +134,11 @@
                       ><div>About Us</div></a
                     >
                   </li>
-                  <li class="menu-item">
+                  <!-- <li class="menu-item">
                     <a class="menu-link" href="demo-construction-projects.html"
                       ><div>Projects</div></a
                     >
-                  </li>
+                  </li> -->
                   <li class="menu-item">
                     <a class="menu-link" href="demo-construction-contact.html"
                       ><div>Contact</div></a
@@ -312,7 +312,7 @@
                   <div class="fbox-media">
                     <img
                       class="rounded"
-                      src="images/services/1.jpg"
+                      src="images/services/4.jpg"
                       alt="Effective Planning"
                     />
                   </div>
@@ -1201,7 +1201,9 @@ management services.
               <div class="row">
                 <div class="col-lg-7">
                   <img
-                    src="images/services/bottom-trust.jpg"
+                    src="images/logo.png"
+                    width="400px"
+                    height="400px"
                     alt="Bottom Trust"
                   />
                 </div>
