--- a/demo-construction-contact.html
+++ b/demo-construction-contact.html
@@ -331,7 +331,7 @@
 
               <!-- Sidebar
 						============================================= -->
-              <aside class="sidebar col-lg-3">
+              <!-- <aside class="sidebar col-lg-3">
                 <div class="widget">
                   <h3 class="mb-0 text-uppercase">Australia</h3>
                   <br />
@@ -417,7 +417,7 @@
                     <i class="fa-brands fa-google"></i>
                   </a>
                 </div>
-              </aside>
+              </aside> -->
               <!-- .sidebar end -->
             </div>
           </div>
