--- a/demo-construction-services.html
+++ b/demo-construction-services.html
@@ -144,11 +144,11 @@
                   ><div>About Us</div></a
                 >
               </li>
-              <li class="menu-item">
+              <!-- <li class="menu-item">
                 <a class="menu-link" href="demo-construction-projects.html"
                   ><div>Projects</div></a
                 >
-              </li>
+              </li> -->
               <li class="menu-item">
                 <a class="menu-link" href="demo-construction-contact.html"
                   ><div>Contact</div></a
