--- a/demo-construction-contact.html
+++ b/demo-construction-contact.html
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="row">
-                      <div class="col-md-4 form-group">
+                      <div class="col-md-6 form-group">
                         <label for="template-contactform-name"
                           >Name <small>*</small></label
                         >
@@ -215,7 +215,7 @@
                         />
                       </div>
 
-                      <div class="col-md-4 form-group">
+                      <div class="col-md-6 form-group">
                         <label for="template-contactform-email"
                           >Email <small>*</small></label
                         >
@@ -227,8 +227,11 @@
                           class="required email form-control"
                         />
                       </div>
+			         <div class="w-100"></div>
 
-                      <div class="col-md-4 form-group">
+			    <div class="row">
+
+                      <div class="col-md-6 form-group">
                         <label for="template-contactform-phone">Phone</label>
                         <input
                           type="text"
@@ -239,9 +242,9 @@
                         />
                       </div>
 
-                      <div class="w-100"></div>
+           
 
-                      <div class="col-md-8 form-group">
+                      <div class="col-md-6 form-group">
                         <label for="template-contactform-subject"
                           >Subject <small>*</small></label
                         >
@@ -253,6 +256,8 @@
                           class="required form-control"
                         />
                       </div>
+
+				    </div>
 
                       <div class="w-100"></div>
 
