--- a/demo-construction-contact.html
+++ b/demo-construction-contact.html
@@ -204,7 +204,7 @@
                     <div class="row">
                       <div class="col-md-6 form-group">
                         <label for="template-contactform-name"
-                          >Name <small>*</small></label
+                          >Name <small class="text-danger">*</small></label
                         >
                         <input
                           type="text"
@@ -217,7 +217,7 @@
 
                       <div class="col-md-6 form-group">
                         <label for="template-contactform-email"
-                          >Email <small>*</small></label
+                          >Email <small class="text-danger">*</small></label
                         >
                         <input
                           type="email"
@@ -246,7 +246,7 @@
 
                       <div class="col-md-6 form-group">
                         <label for="template-contactform-subject"
-                          >Subject <small>*</small></label
+                          >Subject <small class="text-danger">*</small></label
                         >
                         <input
                           type="text"
@@ -263,7 +263,7 @@
 
                       <div class="col-12 form-group">
                         <label for="template-contactform-message"
-                          >Message <small>*</small></label
+                          >Message <small class="text-danger">*</small></label
                         >
                         <textarea
                           class="required form-control"
