--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
                   </div>
                 </div>
               </div>
-<!--               <div
+              <div
                 class="swiper-slide-bg"
                 style="
                   background-image: url('images/slider/2.jpg');
                   background-position: center top;
                 "
-              ></div> -->
+              ></div> 
             </div>
             <div class="swiper-slide">
               <div class="container">
