--- a/index.html
+++ b/index.html
@@ -174,30 +174,23 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="container">
-                <div class="slider-caption">
+                <div class="slider-caption text-dark">
                   <div>
                     <h2>
                       Welcome to
                       <span class="text-rotating">EVRAL RICHARD GODFREY</span>
                     </h2>
-                    <p class="d-none d-sm-block">
+                    <p class="d-none d-sm-block ">
                       Empowering Integrity, Building Trust: Our Vision for
                       Ethical Quantity Surveying
                     </p>
                   </div>
                 </div>
               </div>
-              <div
-                class="swiper-slide-bg"
-                style="
-                  background-image: url('images/slider/2.jpg');
-                  background-position: center top;
-                "
-              ></div> 
             </div>
             <div class="swiper-slide">
               <div class="container">
-                <div class="slider-caption slider-caption-right">
+                <div class="slider-caption slider-caption-right text-dark">
                   <div>
                     <h2 class="text-rotating">OUR VISION</h2>
                     <p class="d-none d-sm-block">
@@ -208,28 +201,11 @@
                   </div>
                 </div>
               </div>
-              <div class="video-wrap no-placeholder">
-                <video
-                  id="slide-video"
-                  poster="images/videos/1.jpg"
-                  preload="auto"
-                  loop
-                  autoplay
-                  muted
-                  playsinline
-                >
-                  <source src="images/videos/1.webm" type="video/webm" />
-                  <source src="images/videos/1.mp4" type="video/mp4" />
-                </video>
-                <div
-                  class="video-overlay"
-                  style="background-color: rgba(0, 0, 0, 0.1)"
-                ></div>
-              </div>
+
             </div>
             <div class="swiper-slide">
               <div class="container">
-                <div class="slider-caption">
+                <div class="slider-caption text-dark">
                   <div>
                     <h2>Premium Constructions</h2>
                     <p class="d-none d-sm-block">
@@ -239,20 +215,7 @@
                   </div>
                 </div>
               </div>
-              <div
-                class="swiper-slide-bg"
-                style="
-                  background-image: url('images/slider/1.jpg');
-                  background-position: center bottom;
-                "
-              ></div>
             </div>
-          </div>
-          <div class="slider-arrow-left">
-            <i class="uil uil-angle-left-b"></i>
-          </div>
-          <div class="slider-arrow-right">
-            <i class="uil uil-angle-right-b"></i>
           </div>
         </div>
       </section>
